--- a/app/src/css/index.css
+++ b/app/src/css/index.css
@@ -2,3 +2,10 @@ body {
     font-size: 16px;
     font-family: 'Courier New', Courier, monospace;
 }
+
+.imgfx {
+    font-style: inherit;
+    font-size: 12px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-image: url('../img/logo.png')
+}
